feature: внести правки